# ellocharlie-engine

./: .gitignore  .gitmodules  .version-bump.json  CHANGELOG.md  CLAUDE.md  GROWTH.md  MEMO.md  README.md  package.json  workspace.yaml
.github/workflows/: brain-health.yml  ci.yml  content-pipeline.yml  daily-standup.yml
agents/: ceo.yml  cto.yml  cx-lead.yml  growth.yml  ops.yml
brain/: README.md  pyproject.toml
brain/brain/: __init__.py  db.py  learning.py  memory.py  server.py  skills.py  team.py
brain/skills/: example-onboarding-flow.md
brain/tests/: conftest.py  test_db.py  test_learning.py  test_memory.py  test_server.py  test_skills.py  test_team.py
dashboard/: app.js  index.html  style.css
docs/: GAP-ANALYSIS.md  PHASE1-CX-PLATFORM.md
docs/plans/: README.md
docs/specs/: README.md
index/: build-index.ts  gist-sync.ts
modules/content/blog-drafts/: 2026-04-10-how-we-built-a-5-person-company-powered-by-ai-agents.md  2026-04-13-why-we-chose-neon-postgres-for-serverless-database-ops.md  2026-04-15-astro-5-for-marketing-sites-what-we-learned.md  2026-04-17-cx-automation-without-losing-the-human-touch.md
modules/content/calendar/: backlog.md
workflows/: content-pipeline.ts  daily-standup.ts  weekly-review.ts
